--- a/index.html
+++ b/index.html
@@ -6,52 +6,57 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body class="body">
-  <div class="header">
+  <header class="header">
+    <h1 class="title">Todo App</h1>
     <img class="header-img" src="./eisenhower-matrix.jpg">
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="main">
-    <p id="add-item">
-      <label class="new-task-label" for="new-task">Add Item</label>
+  </header>
+  <main class="main">
+    <section id="add-item">
+      <h2 class="new-task-label">Add Item</h2>
       <div class="task-row">
         <input id="new-task"class="task input input-text" type="text">
         <button class="button">Add</button>
       </div>
-    </p>
-    <h3 class="heading">Todo</h3>
-    <ul class="list" id="incomplete-tasks">
-      <li class="list-item">
-        <input class="input input-checkbox" type="checkbox">
-        <label class="task task-label">Pay Bills</label>
-        <input type="text" class="task input input-text">
-        <button class="edit button">Edit</button>
-        <button class="delete button">
-          <img class="button-img" src="./remove.svg">
-        </button>
-      </li>
-      <li class="list-item edit-mode">
-        <input class="input input-checkbox" type="checkbox">
-        <label class="task task-label">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task input input-text">
-        <button class="edit button">Save</button>
-        <button class="delete button">
-          <img class="button-img" src="./remove.svg">
-        </button>
-      </li>
-    </ul>
-    <h3 class="heading">Completed</h3>
-    <ul class="list" id="completed-tasks">
-      <li class="list-item">
-        <input class="input input-checkbox" type="checkbox" checked>
-        <label class="task task-label">See the Doctor</label>
-        <input type="text" class="task input input-text">
-        <button class="edit button">Edit</button>
-        <button class="delete button">
-          <img class="button-img" src="./remove.svg">
-        </button>
-      </li>
-    </ul>
-  </div>
+    </section>
+    <section>
+      <h2 class="heading">Todo</h2>
+      <ul class="list" id="incomplete-tasks">
+        <li class="list-item">
+          <input class="input input-checkbox" type="checkbox">
+          <label class="task task-label">Pay Bills</label>
+          <input type="text" class="task input input-text">
+          <button class="edit button">Edit</button>
+          <button class="delete button">
+            <img class="button-img" src="./remove.svg">
+          </button>
+        </li>
+        <li class="list-item edit-mode">
+          <input class="input input-checkbox" type="checkbox">
+          <label class="task task-label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task input input-text">
+          <button class="edit button">Save</button>
+          <button class="delete button">
+            <img class="button-img" src="./remove.svg">
+          </button>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h3 class="heading">Completed</h3>
+      <ul class="list" id="completed-tasks">
+        <li class="list-item">
+          <input class="input input-checkbox" type="checkbox" checked>
+          <label class="task task-label">See the Doctor</label>
+          <input type="text" class="task input input-text">
+          <button class="edit button">Edit</button>
+          <button class="delete button">
+            <img class="button-img" src="./remove.svg">
+          </button>
+        </li>
+      </ul>
+    </section>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
