--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body class="body">
   <header class="header">
     <h1 class="title">Todo App</h1>
-    <img class="header-img" src="./eisenhower-matrix.jpg">
+    <img class="header-img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
@@ -28,7 +28,7 @@
           <input type="text" class="task input input-text">
           <button class="edit button">Edit</button>
           <button class="delete button">
-            <img class="button-img" src="./remove.svg">
+            <img class="button-img" src="./remove.svg" alt="remove button">
           </button>
         </li>
         <li class="list-item edit-mode">
@@ -37,7 +37,7 @@
           <input type="text" value="Go Shopping" class="task input input-text">
           <button class="edit button">Save</button>
           <button class="delete button">
-            <img class="button-img" src="./remove.svg">
+            <img class="button-img" src="./remove.svg" alt="remove button">
           </button>
         </li>
       </ul>
@@ -51,7 +51,7 @@
           <input type="text" class="task input input-text">
           <button class="edit button">Edit</button>
           <button class="delete button">
-            <img class="button-img" src="./remove.svg">
+            <img class="button-img" src="./remove.svg" alt="remove button">
           </button>
         </li>
       </ul>
