--- a/index.html
+++ b/index.html
@@ -7,51 +7,51 @@
 </head>
 <body class="body">
   <header class="header">
-    <h1 class="title">Todo App</h1>
-    <img class="header-img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
-    <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <h1 class="header__title">Todo App</h1>
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
+    <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
-    <section id="add-item">
-      <h2 class="new-task-label">Add Item</h2>
-      <div class="task-row">
-        <input id="new-task"class="task input input-text" type="text">
-        <button class="button">Add</button>
+    <section class="task">
+      <h2 class="task__title">Add Item</h2>
+      <div class="task__row">
+        <input class="task__input task__input--text task__input--new" type="text">
+        <button class="task__button task__button--add">Add</button>
       </div>
     </section>
-    <section>
-      <h2 class="heading">Todo</h2>
-      <ul class="list" id="incomplete-tasks">
-        <li class="list-item">
-          <input class="input input-checkbox" type="checkbox">
-          <label class="task task-label">Pay Bills</label>
-          <input type="text" class="task input input-text">
-          <button class="edit button">Edit</button>
-          <button class="delete button">
-            <img class="button-img" src="./remove.svg" alt="remove button">
+    <section class="task">
+      <h2 class="task__title">Todo</h2>
+      <ul class="task__list" id="incomplete-tasks">
+        <li class="task__item">
+          <input class="task__input task__input--checkbox" type="checkbox">
+          <label class="task__label">Pay Bills</label>
+          <input type="text" class="task__input task__input--text">
+          <button class="task__button task__button--edit">Edit</button>
+          <button class="task__button task__button--delete">
+            <img class="task__button-img" src="./remove.svg" alt="remove button">
           </button>
         </li>
-        <li class="list-item edit-mode">
-          <input class="input input-checkbox" type="checkbox">
-          <label class="task task-label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task input input-text">
-          <button class="edit button">Save</button>
-          <button class="delete button">
-            <img class="button-img" src="./remove.svg" alt="remove button">
+        <li class="task__item task__item--edit-mode">
+          <input class="task__input task__input--checkbox" type="checkbox">
+          <label class="task__label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task__input task__input--text">
+          <button class="task__button task__button--edit">Save</button>
+          <button class="task__button task__button--delete">
+            <img class="task__button-img" src="./remove.svg" alt="remove button">
           </button>
         </li>
       </ul>
     </section>
-    <section>
-      <h3 class="heading">Completed</h3>
-      <ul class="list" id="completed-tasks">
-        <li class="list-item">
-          <input class="input input-checkbox" type="checkbox" checked>
-          <label class="task task-label">See the Doctor</label>
-          <input type="text" class="task input input-text">
-          <button class="edit button">Edit</button>
-          <button class="delete button">
-            <img class="button-img" src="./remove.svg" alt="remove button">
+    <section class="task">
+      <h3 class="task__title">Completed</h3>
+      <ul class="task__list" id="completed-tasks">
+        <li class="task__item">
+          <input class="task__input task__input--checkbox" type="checkbox" checked>
+          <label class="task__label">See the Doctor</label>
+          <input type="text" class="task__input task__input--text">
+          <button class="task__button task__button--edit">Edit</button>
+          <button class="task__button task__button--delete">
+            <img class="task__button-img" src="./remove.svg" alt="remove button">
           </button>
         </li>
       </ul>
